Fix characters page title visibility.

--- a/styles/characters-page.css
+++ b/styles/characters-page.css
@@ -5,6 +5,7 @@ body {
 
 .title {
   font-size: 45px;
+  margin-top: 150px;
   color: var(--white);
   display: flex;
   justify-content: center;
@@ -14,7 +15,7 @@ body {
 
 .characters-list-view {
   max-width: 900px;
-  margin: 120px auto;
+  margin: 0px auto 120px auto;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -65,6 +66,7 @@ body {
 
   .title {
     font-size: 28px;
+    margin-top: 200px;
     margin-bottom: 20px;
   }
 
